# master-project

./: ._output-context-bert-2.txt  ._output-context-bilstmcrf-2.txt  ._output.err  ._output.txt  ._script.slurm  .gitignore  .gitmodules  .script.slurm.swp  README.md  Session.vim  [!]  bilstmcrf-output.txt  output-2.txt  output-bert-window.err  output-bert-window.txt  output-bert.err  output-bert.txt  output-bilstm-window.err  output-bilstm-window.txt  output-bilstm.err  output-bilstm.txt  output-context-bert-2.txt  output-context-bert-3.txt  output-context-bert.txt  output-context-bilstmcrf-2.txt  output-context-bilstmcrf-3.txt  output-context-bilstmcrf.txt  output-nb-bert-base.txt  output.err  output.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: github-actions.yml
app/: README.md  app.py  files.py  main.py
app/templates/: base.html  home.html  index.html  save.html  simple_network.html  simple_network2.html  upload.html
config/pipeline/: config.ini
data/: common.csv  ner_train.csv
data/MTSamples/: ex1.txt  ex10.txt  ex11.txt  ex12.txt  ex13.txt  ex14.txt  ex15.txt  ex16.txt  ex17.txt  ex18.txt  ex19.txt  ex2.txt  ex20.txt  ex21.txt  ex22.txt  ex23.txt  ex24.txt  ex25.txt  ex3.txt  ex4.txt  ex5.txt  ex6.txt  ex7.txt  ex8.txt  ex9.txt
data/NorSynthClinical/: .stats_cache  annotation.conf  example1.ann  example1.txt  example1.uio  example1.vert  example2.ann  example2.txt  example2.uio  example2.vert  example3.ann  example3.raw  example3.uio  example3.vert  example4.ann  example4.raw  example4.uio  example4.vert  example5.ann  example5.txt  example5.uio  example5.vert  pal_090318.ann  pal_090318.raw  pal_090318.uio  pal_090318.vert  pal_120618.ann  pal_120618.raw  pal_120618.uio  pal_120618.vert  pal_150618.ann  pal_150618.txt  pal_150618.uio  pal_150618.vert  pal_190618.ann  pal_190618.raw  pal_190618.uio  pal_190618.vert  pal_230318.ann  pal_230318.raw  (+21 more)
data/annotated/: journal-2.tsv  journal.tsv  test.csv
data/annotated_MTSamples/: ex1.tsv  (+16 more)
notebooks/: NorSynthClinical.ipynb  annotated.ipynb  bilstm-crf.ipynb  common.csv  data.ipynb  dataset.ipynb  finetune-bert.ipynb  graph.ipynb  lexicon.ipynb  llm.ipynb  output_network.html  pipeline.ipynb  simple_network.html  synthetic.ipynb  tee.ipynb  test.csv  timeline.ipynb  tre.ipynb  visualization.ipynb
tests/: pipeline.py  test_pipeline.ini  test_pipeline.py
(+1529 files in other folders)
