[tool.poetry]
name = "master-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pipeline", from="src"}, {include = "preprocess", from="src"}, {include = "ner", from="src"}, {include = "structure", from="src"}, {include = "visualization", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"
transformers = "^4.45.2"
torch = "^2.4.1"
pytest = "^8.3.3"
pyvis = "^0.3.2"
ruff = "^0.6.9"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
