[tool.poetry]
name = "master-project"
version = "0.1.0"
description = ""
authors = ["Julie Vy Tran <julievy9@gmail.com>"]
readme = "README.md"
packages = [{include = "model", from="src"}, {include = "pipeline", from="src"}, {include = "preprocess", from="src"}, {include = "textmining", from="src"}, {include = "structure", from="src"}, {include = "visualization", from="src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"
transformers = "^4.45.2"
torch = "^2.4.1"
pytest = "^8.3.3"
pyvis = "^0.3.2"
ruff = "^0.6.9"
bs4 = "^0.0.2"
numpy = "1.26.4"
pandas = "^2.2.3"
protobuf = "^5.28.2"
sentencepiece = "^0.2.0"
nltk = "^3.9.1"
matplotlib = "^3.9.2"
pypdf = "^5.1.0"
wandb = "^0.19.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"
sutime = "^1.0.1"
jpype1 = "^1.5.2"
polyglot = "^16.7.4"
icu = "^0.0.1"
lingua-language-detector = "^2.0.2"
accelerate = "^1.3.0"
spacy = "^3.8.4"
nb_core_news_sm = {url = "https://github.com/explosion/spacy-models/releases/download/nb_core_news_sm-3.8.0/nb_core_news_sm-3.8.0.tar.gz"}
pikepdf = "^9.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
